--- a/index.html
+++ b/index.html
@@ -4,61 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Jack Jewell's Portfolio</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style = "height: 80px">
-        <a class="navbar-brand" href="#">Jack Jewell</a>
-    
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="../bootstrap-portfolio/contact.html">Contact</a>
-            </li>
 
-            <li class="nav-item">
-                <a class="nav-link" href="../bootstrap-portfolio/portfolio.html">Portfolio</a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" href="../bootstrap-portfolio/index.html">About</a>
-            </li>
-        </ul>
-
-    </nav> 
-
-    <div class = "my-20 container">
+    <div class = "container">
+        <header style = "margin-bottom: 50px"> 
+            <div class = "row-12">
+                <span class="border-bottom"> 
+                    <div class = "col-3">
+                        <h1>Jack Jewell</h1>
+                    </div>
+                    <div class = "col-sm-1 float-right">
+                        <a class="nav-link" href="../bootstrap-portfolio/index.html">About</a>
+                    </div>
+                    <div class = "col-sm-1 float-right">
+                        <a class="nav-link" href="../bootstrap-portfolio/portfolio.html">Portfolio</a>
+                    </div>
+                    <div class = "col-sm-1 float-right">
+                        <a class="nav-link" href="../bootstrap-portfolio/contact.html">Contact</a>
+                    </div>
+                </span>
+            </div>
+        </header>
         <div class = "row" style = "margin: 20px">
             <span class="border"> 
                 <div class = "col-8">
                     <h2>
-                        About me!
+                        About me
                     </h2>
-                    <img src="assets/images/headshot (2).jpg" style= "width: 40%" alt="A Picture of Me">
-                    <div class = "text-wrap">
-                        <p>
-                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-                            <br>
-                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-                            <br>
-                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-                        </p>
-                    </div>
+                    <hr>
+                    <img src="assets/images/headshot (2).jpg" class = "float-left" style= "width: 40%" alt="A Picture of Me">
+                    <p>
+                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                        <br>
+                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                        <br>
+                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                    </p>
                 </div>
              </span>
         </div>
 
-       <div class = "row">
-            <div class = "mx-auto" style = "margin-top: 20px">
+       <div class = "row fixed-bottom">
+            <div class = "mx-auto " style = "margin-top: 20px">
                 All rights reserved © 2019 Jackson Jewell
             </div>
         </div>
