--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,41 @@
             <div class = "row" style = "margin: 20px">
                 <span class="border"> 
                     <div class = "col-8">
-                      
+
+                        <div class="thumbnail text-center float-left">
+                            <img src="../bootstrap-portfolio/assets/images/technics-q-c-200-200-4.jpg" class = "img-responsive" alt="Portfolio image 1"/>
+                            <div class="caption">
+                                <h2 style = "color: #ffffff">Hangman</h2>
+                            </div>
+                        </div>
+
+                        <div class="thumbnail text-center float-left">
+                            <img src="../bootstrap-portfolio/assets/images/technics-q-c-200-200-4.jpg" class = "img-responsive" alt="Portfolio image 2"/>
+                            <div class="caption">
+                                <h2 style = "color: #ffffff">RPG Game</h2>
+                            </div>
+                        </div>
+
+                        <div class="thumbnail text-center float-left">
+                            <img src="../bootstrap-portfolio/assets/images/technics-q-c-200-200-4.jpg" class = "img-responsive" alt="Portfolio image 3"/>
+                            <div class="caption">
+                                <h2 style = "color: #ffffff">Trivia Game</h2>
+                            </div>
+                        </div>
+
+                        <div class="thumbnail text-center float-left">
+                            <img src="../bootstrap-portfolio/assets/images/technics-q-c-200-200-4.jpg" class = "img-responsive" alt="Portfolio image 4"/>
+                            <div class="caption">
+                                <h2 style = "color: #ffffff">Rutgers Info Widget</h2>
+                            </div>
+                        </div>
+
+                        <div class="thumbnail text-center float-left">
+                            <img src="../bootstrap-portfolio/assets/images/technics-q-c-200-200-4.jpg" class = "img-responsive" alt="Portfolio image 5"/>
+                            <div class="caption">
+                                <h2 style = "color: #ffffff">Rock Paper Scissors</h2>
+                            </div>
+                        </div>
                     </div>
                 </span>
             </div>
